fix z-index

--- a/src/Form/Components/Utils/ShowError.scss
+++ b/src/Form/Components/Utils/ShowError.scss
@@ -5,8 +5,7 @@
   font-size: 14px;
   position: absolute;
 }
-
-.error-tip {
+.ant-tooltip.error-tip {
   z-index: 99;
   .ant-tooltip-arrow {
     &::before {
